# demucs-onnx

./: .gitignore  Cargo.toml  README.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run.py  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  pkg-pr-new.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  ort_driver.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  dsp.rs  lib.rs
crates/napi/: Cargo.toml  cli.mjs
crates/napi/src/: lib.rs
crates/ort-driver/: Cargo.toml
crates/ort-driver/src/: lib.rs
crates/wasm/: package.json
crates/wasm/src/: lib.rs
docs/: README.md  architecture.md  bass-cover.md  bass-cover.py  benchmark.md  demucs.md  development.md  history.md  inference-pipeline.html  model-core.html  model-release-notes.md  model-release.md  pipeline.html  split-dsp.md
docs/postmortems/: 2026-07-09-initial-port.md
examples/: bass-cover.py  bass-cover.ts
fixtures/: README.md  istft-reference-f32.json  stft-reference-f32.json
notes/: demucs.md  design.md  pipeline.html  postmortem-2026-07-09.md
rust/: Cargo.toml
rust/core/src/: engine.rs  vocab.rs  wav.rs
rust/napi/: Cargo.toml
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
scripts/: export_onnx.py  pyproject.toml  strip_dft.py  verify_parity.py
tools/: bass-cover.py  benchmark-native.ts  benchmark-summary.ts  benchmark.ts  compare-wav.py  download-models.sh  generate-benchmark-fixture.ts  link-wt.sh  model_release.py  release-models.sh  wasm-cli.mjs
tools/model-export/: build_models.py  convert_fp16.py  export_onnx.py  export_split_onnx.py  strip_dft.py  verify_parity.py
tools/model-export-v2/: build_models.py  export_onnx.py  export_split_onnx.py  generate_istft_fixture.py  generate_stft_fixture.py  model.py  pyproject.toml  verify_parity.py
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: main.ts  worker.ts
web/src/audio/: separate.ts
