[package]
name = "demucs-cli"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "demucs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
demucs-core = { path = "../core" }
indicatif = "0.18"
# default features with tls-native swapped for tls-rustls, so the binary downloader
# doesn't need system OpenSSL headers
ort = { version = "2.0.0-rc.10", default-features = false, features = [
  "std",
  "ndarray",
  "tracing",
  "download-binaries",
  "tls-rustls",
  "copy-dylibs",
  "api-24",
] }
