[package]
name = "demucs-napi"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
demucs-core = { path = "../core" }
demucs-ort-driver = { path = "../ort-driver" }
napi = { version = "3", features = ["napi8"] }
napi-derive = "3"
# default features with tls-native swapped for tls-rustls (see cli/Cargo.toml)
ort = { version = "2.0.0-rc.10", default-features = false, features = [
  "std",
  "ndarray",
  "tracing",
  "download-binaries",
  "tls-rustls",
  "copy-dylibs",
  "api-24",
] }

[build-dependencies]
napi-build = "2"
